<resources>
    <string name="app_name">MemoCard</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send_button">Enviar DataMap</string>
    <string name="front_insert">Frente do cartão</string>
    <string name="versu_insert">Verso do cartão</string>
    <string name="deck_tittle">Título do Deck</string>
    <string name="deck_description">Descrição do deck</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="hint_insert">Adicione uma Dica</string>
    <string name="front_error">Você precisa inserir a frente do Cartão</string>
    <string name="back_error">Você precisa inserir o verso do Cartão</string>
    <string name="save_card_ok">Novo Cartão adicionado com Sucesso</string>
    <string name="study_button">Estudar</string>
    <string name="front_trans">front_card_shared</string>
    <string name="review_errors">Rever Erros</string>
    <string name="review_all">Rever Todos</string>
    <string name="right_desc">Acertos</string>
    <string name="rong_desc">Erros</string>
    <string name="results_header">Resultados</string>
    <string name="ok">ok</string>
    <string name="add_card_header">NOVO CARD</string>
    <string name="add_deck_header">NOVO DECK</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="front_null_insert">Frente Necessária</string>
    <string name="back_null_insert">Verso Necessário</string>>
</resources>
