<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/add_deck_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/front_insert"
        />
    <EditText
        android:id="@+id/add_deck_description"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/versu_insert"
        />
    <Button
        android:id="@+id/add_deck"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/save"
        android:onClick="saveDeck"
        />
</LinearLayout>